web_app/journeyplanner/static/journeyplanner/main.css
/* ... */
#tourist-destination-error {
  display: none;
  color: red;
  margin-left: 5px;
}

.invalid-location-error{
  display: none;
  /* color: red;
  margin-left: 5px; */
}

.alert-danger {
  width: 95%;
}

#stop-to-stop-incomplete-form-error {
  display: none;
}

/* leap card */
#leap-login-container {
  margin-top: 10px;
}

.leap-result {
  display: none;
}

#leap-login-button {
  margin-top: 10px;
  margin-left: 5px;
}

#leap-account-needed{
  margin-left: 5px;
}

/*realtime info */
#real-time {
  margin-top: 10px;
}

#realtime-input {
  width: 420px;
}

#realtime-error {
  display: none;
  margin-left: 15px;
}

#routeplanner-form {
  margin-top: 10px;
}

.fare-header {
  text-align: left;
  font-weight: 600;
}

#leap-logout {
  display: none;
  margin-left: 30px;
}

/* fare */

.fare-button {
  text-align: left;
  margin-left: 0px;
}

#accordion-fare-tourist {
  display: none;
}

#accordion-fare {
  display:none;
}

#accordion-fare-tab2 {
  display:none;
  
}

.fare-accordion {
  margin-left: 15px;
  margin-bottom: 10px;
}

.tab-card {
  width: 90vw;
  max-width: 400px;
}


.fare-result-detailed{
  padding-left: 0px;
  margin-bottom: 10px;
  padding-bottom: 0px;
}

.fare-total-message {
  display: none;
  font-size: 0.9em;
  color: red;
}

.upper-fare-content {
  margin-left: 0px;
  padding-left: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
}

.card-body {
  padding-bottom: 0px;
}

.card-header {
  background-color: white;
}

#traffic-incident {
  display:none;
  width: 92%;
  margin-left: 15px;
}

#no-data-error{
  width: 95%;
  margin: auto;
  margin-top: 15px;
}
  
/* media queries to make interface responsive */
  /* when the screen becomes smaller than 992px, the interface becomes full screen and the map is hidden */
  @media only screen and (max-width: 992px) {
    
    #traffic-incident{
      width: 90vw;
    }
    
    .tab-card {
      width: 90vw;
      max-width: 650px;
    }

    #fullscreen-map {
      /* height: calc(100vh - 85px); */
      height: 400px;
    }

    /* hide tab title on mobiles */
    .tab-title {
      display: none;
    }

    .navbar-brand {
      color: white;
      padding-left: 10px;
      font-size: 1.6em;
    }

      #map-interface {
        top: 0px;
        left: 0px;
        min-width: 100vw;
        height: fit-content;
      }

      #map-interface-content {
        max-width: unset;
        width: 100vw;
        height: auto;
        min-height: calc(100vh - 149px);
        
      }
      #map-button {
        display: block;
      }
  
      /* hide tab menu sidebar on mobile */
      #tab-menu  {
        display: none;
      }
  
      /* mobile screen bottom nav */
      .fixed-bottom {
        display: block;
        height: 85px;
        width: 100vw; 
        min-width: 320px;
      }
      
      .nav-item.nav-bottom {
        width: 20%;
      }
  
      .nav-link.nav-bottom {
        font-size: 0.8rem;
      }
  

      #bottom-nav-div {
        height: 85px;
        padding: 0px;
        min-width: 320px;
      }
  
      a.nav-item.nav-link.load-interface.nav-bottom {
        height: 85px;
        width: 100%;
        text-align: center;
        padding-top: 10px;
        padding-left: 10px;
        background-color:	#DCDCDC;
      }

      a.nav-item.nav-link.load-interface.nav-bottom.active {
        background-color: #A9A9A9;
      }
    
      .word {
        padding-top: 5px !important;
      }

      .desktop-dt {
        display:none;
      }
  
      .mobile-dt{
        display: block;
      }

      .mobile-space {
        display: block;
        height: 120px;
      }

      /* make input boxes narrower on mobile screen*/
      .input-box {
        max-width: 70vw;
        min-width: 270px;  
        width: 70vw;       
      }

      #geolocation-tourist {
        margin: 0px !important;
        padding-left: 5px;
      }

      .form-area {
        margin: 0px;
        max-width: unset;
      }

      #form-area-stop-to-stop {
        padding-top: 15px;
      }

      .row .datetime {
        margin-left: 4px;
        max-width: 200px;
      }

      .container .news {
        padding: 0px;
        width: 90%;
        margin-left: 7px;
        margin-right: 3px;
      }

          /* instructions to user on map interface */
    .instruction {
      font-size: 0.9em;
      margin-left: 10px;
      width: 90vw;
    }

     /* route-plan-results*/
  #route-results {
   margin-left: 5px;
   margin-right: 5px;
  }

  #route-results-tourist {
    margin-left: 5px;
    margin-right: 5px;
   }

   .card.results {
    padding-top: 10px;
    padding-left: 10px;
    padding-right: 10px;
    margin: 5px 15px 15px 15px;
    width: 90vw;
    min-width: 300px;
  }

  #results-chart {
    width: 480px;
    padding-left: 0px;
  }

  .chart-container {
    margin-top: 20px;
  }

  .edit-journey {
    margin-top: 10px;
  }

  #realtime-input {
    max-width: 300px;
  }
  }
  /* change font of bottom nav when mobile screens get below 400px */
  @media only screen and (max-width: 360px){

    a.nav-item.nav-link.load-interface.nav-bottom{
      font-size: 0.6em;
    }

    /* show map interface again when screen is stretched out */
    @media only screen and (min-width: 992px) {
      #map-interface {
        z-index: 1000;
        position: absolute;
        display: block;
        top: 90px;
        left: 50px;
        bottom: 50px;
        width: 440px;
        height: 550px;
      }
    }
  }


  .ui-autocomplete {
    position: absolute;
    top: 100%;
    left: 0;
    z-index: 1000;
    display: none;
    float: left;
    min-width: 160px;
    padding: 5px 0;
    margin: 2px 0 0;
    list-style: none;
    font-size: 14px;
    text-align: left;
    background-color: #ffffff;
    border: 1px solid #cccccc;
    border: 1px solid rgba(0, 0, 0, 0.15);
    border-radius: 4px;
    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
    background-clip: padding-box;
  }
/* ... */

